--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Google認証情報
-credentials-sheets.json
+credentials-sheet.json
 # Created by https://www.toptal.com/developers/gitignore/api/linux,python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,python,visualstudiocode
 
